src/objects/ffirule__IntegrationRuleLog__c.object
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulelog</customHelpPage>
    <fields>
        <fullName>ffirule__ApexJobID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Apex Job ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__Errors__c</fullName>
        <label>Errors</label>
        <summaryFilterItems>
            <field>ffirule__IntegrationRuleLogLineItem__c.ffirule__Severity__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>ffirule__IntegrationRuleLogLineItem__c.ffirule__IntegrationRuleLog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRuleButton__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Button</label>
        <referenceTo>ffirule__IntegrationRuleButton__c</referenceTo>
        <relationshipLabel>ClickLink Logs</relationshipLabel>
        <relationshipName>IntegrationRuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRuleJobNoneScheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Now Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRuleJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Job</label>
        <referenceTo>ffirule__IntegrationRuleJob__c</referenceTo>
        <relationshipLabel>ClickLink Logs</relationshipLabel>
        <relationshipName>IntegrationRuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Rule</label>
        <referenceTo>ffirule__IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Logs</relationshipLabel>
        <relationshipName>IntegrationRuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__Lines__c</fullName>
        <label>Lines</label>
        <summaryForeignKey>ffirule__IntegrationRuleLogLineItem__c.ffirule__IntegrationRuleLog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffirule__Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IntegrationRuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ClickLink Log</label>
    <listViews>
        <fullName>ffirule__All</fullName>
        <columns>NAME</columns>
        <columns>ffirule__IntegrationRule__c</columns>
        <columns>ffirule__IntegrationRuleButton__c</columns>
        <columns>ffirule__IntegrationRuleJob__c</columns>
        <columns>ffirule__Summary__c</columns>
        <columns>ffirule__Errors__c</columns>
        <columns>ffirule__Lines__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ffirule__LogsWithErrors</fullName>
        <columns>NAME</columns>
        <columns>ffirule__IntegrationRule__c</columns>
        <columns>ffirule__IntegrationRuleButton__c</columns>
        <columns>ffirule__IntegrationRuleJob__c</columns>
        <columns>ffirule__Summary__c</columns>
        <columns>ffirule__Errors__c</columns>
        <columns>ffirule__Lines__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffirule__Errors__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Logs with Errors</label>
    </listViews>
    <nameField>
        <displayFormat>SOLOG-{00000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>